# gallerai

./: docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4a673108b2c3_initial.py  a6180ae58d8c_initial_schema.py  a9c12b1d7888_initial.py
app/: config.py  main.py
app/api/: __init__.py  auth.py  dependencies.py  downloads.py  event.py  faces.py  gallery.py  media.py  photos.py
app/core/: cache.py  config.py  enums.py  exceptions.py  logging.py  middleware.py  pagination.py  schemas.py  security.py  utils.py
app/db/: __init__.py  mongo.py  psql.py  redis.py
app/models/: __init__.py  event.py  face_embedding.py  gallery.py  media.py  photo.py  platform.py  tokens.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  event.py  face.py  gallery.py  media.py  photo.py  user.py
app/services/: auth_service.py  download_service.py  email_service.py  event_service.py  face_service.py  gallery_service.py  media_service.py  photo_service.py  platform_service.py  search_service.py  storage_service.py
app/services/storage_service/: __init__.py  base.py  cloudinary.py  constants.py  exceptions.py  factory.py  local.py  schemas.py
app/templates/emails/: base.html
app/templates/emails/password_reset/: body.html
app/templates/emails/verify_email/: body.html
app/templates/emails/welcome/: body.html
app/workers/: celery_app.py  media_tasks.py  photo_tasks.py
