[project]
name = "gallerai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "deepface>=0.0.99",
    "fastapi>=0.135.1",
    "motor>=3.7.1",
    "numpy>=2.4.3",
    "passlib>=1.7.4",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "tf-keras>=2.20.1",
    "uvicorn[standard]>=0.41.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ "E", "F", "I", "B", "UP" ]

ignore = [ "E501", "UP017" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
